# chowdsp_utils

.github/workflows/: simd-extensions.yml
cmake/: SIMDExtensions.cmake
examples/ModalSpringReverb/: CMakeLists.txt  ModalReverbPlugin.cpp  ModalReverbPlugin.h
modules/chowdsp_dsp/: chowdsp_dsp.h
modules/chowdsp_dsp/DataStructures/: chowdsp_LookupTableTransform.cpp  chowdsp_SmoothedBufferValue.cpp  chowdsp_SmoothedBufferValue.h
modules/chowdsp_dsp/Processors/: chowdsp_BypassProcessor.cpp
modules/common/chowdsp_core/JUCEHelpers/: juce_FloatVectorOperations.cpp
modules/dsp/chowdsp_dsp_data_structures/Buffers/: chowdsp_Buffer.cpp  chowdsp_Buffer.h  chowdsp_StaticBuffer.cpp  chowdsp_StaticBuffer.h
modules/dsp/chowdsp_dsp_utils/Delay/: chowdsp_DelayInterpolation.h
modules/dsp/chowdsp_math/Math/: chowdsp_FloatVectorOperations.cpp  chowdsp_FloatVectorOperations.h
modules/dsp/chowdsp_modal_dsp/ModalFilters/: chowdsp_ModalFilter.cpp  chowdsp_ModalFilter.h  chowdsp_ModalFilterBank.cpp  chowdsp_ModalFilterBank.h
modules/dsp/chowdsp_simd/: chowdsp_simd.h
modules/dsp/chowdsp_simd/SIMD/: chowdsp_SIMDAlignment.h  chowdsp_SIMDAlignmentHelpers.h  chowdsp_SIMDArchitectures.h  chowdsp_SIMDComplexMathOps.h  chowdsp_SIMDUtils.h
tests/: CMakeLists.txt
tests/dsp_tests/chowdsp_math_test/: CMakeLists.txt  FloatVectorOperationsTest.cpp
tests/dsp_tests/chowdsp_simd_test/: CMakeLists.txt
